fix: Remove raw uses of parameterized classes (#1880)
Move existing `RemoteSource` to core so we don't parse raw JSON.